--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/assets/logo.png" />
+		<link rel="icon" type="image/svg+xml" href="./src/assets/images/logo.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script
 			src="https://kit.fontawesome.com/72b92c84c4.js"
@@ -14,6 +14,6 @@
 	<body class="bg-[#16151D]" style="font-family: Gotham Pro, sans-serif">
 		<div id="root"></div>
 		<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
-		<script type="module" src="/src/main.jsx"></script>
+		<script type="module" src="../src/main.jsx"></script>
 	</body>
 </html>
