--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 			src="https://kit.fontawesome.com/72b92c84c4.js"
 			crossorigin="anonymous"
 		></script>
-		<link href="https://fonts.cdnfonts.com/css/gotham-pro" rel="stylesheet" />
+		<link rel="stylesheet" href="https://fonts.cdnfonts.com/css/gotham-pro" />
 		<title>Bbteam</title>
 	</head>
 	<body class="bg-[#16151D]" style="font-family: Gotham Pro, sans-serif">
 		<div id="root"></div>
 		<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
-		<script type="module" src="../src/main.jsx"></script>
+		<script type="module" src="src/main.jsx"></script>
 	</body>
 </html>
