--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="https://fonts.cdnfonts.com/css/gotham-pro" />
 		<title>Bbteam</title>
 	</head>
-	<body class="bg-[#16151D]" style="font-family: Gotham Pro, sans-serif">
+	<body class="bg-main_bg" style="font-family: Gotham Pro, sans-serif">
 		<div id="root"></div>
 		<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
 		<script type="module" src="src/main.jsx"></script>
