--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="./src/assets/images/logo.png" />
+		<link rel="icon" type="image/svg+xml" href="/images/logo.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script
 			src="https://kit.fontawesome.com/72b92c84c4.js"
