--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 			src="https://kit.fontawesome.com/72b92c84c4.js"
 			crossorigin="anonymous"
 		></script>
-		<link rel="stylesheet" href="https://fonts.cdnfonts.com/css/gotham-pro" />
 		<title>Bbteam</title>
 	</head>
-	<body class="bg-main_bg" style="font-family: Gotham Pro, sans-serif">
+	<body class="bg-main_bg font-sans">
 		<div id="root"></div>
 		<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
 		<script type="module" src="src/main.jsx"></script>
